alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .cont{
     height: 100px;
-    border: 2px solid ;
+    /* border: 2px solid ; */
     width: 100%;
     border: 1px solid;
-  padding: 10px;
-  box-shadow: 5px 10px chocolate;
+  /* padding: 10px; */
+  /* box-shadow: 5px 10px chocolate; */
   position: sticky;
-  top:.5px;
+  top  : 0px;
   background-color: darkred;
 }
 #b2 {
@@ -49,7 +49,7 @@
     display: none;
 }
 #adds{
-    width: 100%;
+    max-width: 1800;
     height: 400px;
     border: 2px solid darkred;
     text-align: center;
@@ -60,9 +60,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 90%;
-    /* border: 2px solid black; */
-/* padding: 50px; */
-margin: 100px;
+margin: 80px;
 }
 #box{
     width: 300px;
@@ -70,4 +68,13 @@ margin: 100px;
     border: 2px solid darkred;
     margin: 50px;
     background-color: chocolate;
+}
+
+#btm{
+max-width: 1500px;
+height: 200px;
+border: 2px solid black;
+margin: auto;
+font-size: 4em;
+text-align: center;
 }
